--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "@sap/bas-sdk": "2.0.7",
     "@sap/bas-sdk-cf-utils": "1.2.0",
     "@sap/cds": "6.0.1",
-    "@sap/cds-compiler": "3.0.0",
-    "@sap/cds-dk": "4.9.7",
+    "@sap/cds-compiler": "3.0.2",
+    "@sap/cds-dk": "6.0.1",
     "@sap/cds-dk-foss": "1.0.2",
     "@sap/cds-foss": "4.0.0",
+    "@sap/cds-graphql": "1.0.0",
     "@sap/cds-hana": "1.25.2",
     "@sap/cds-lsp": "6.0.0",
     "@sap/cds-messaging": "1.8.3",
@@ -95,6 +96,7 @@
     "@sap/cloud-sdk-op-vdm-central-purchase-contract-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-central-request-for-quotation-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-central-supplier-quotation-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-change-master-v2-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-change-process-group-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-change-record-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-characteristic-data-for-classification-service": "2.1.0",
@@ -121,13 +123,13 @@
     "@sap/cloud-sdk-op-vdm-cost-center-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-country-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-credit-management-master-data-integration-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-credit-memo-request-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-group-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-material-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-return-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-returns-delivery-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-supplier-industry-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-debit-memo-request-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-default-segment-value-maintenance-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-category-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-class-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-code-service": "2.1.0",
@@ -137,6 +139,7 @@
     "@sap/cloud-sdk-op-vdm-distribution-channel-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-division-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-document-management-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-equipment-hierarchy-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-equipment-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-explicit-assortment-module-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-external-events-read-create-service": "2.1.0",
@@ -144,7 +147,6 @@
     "@sap/cloud-sdk-op-vdm-finance-complementary-table-data-maintenance-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-financial-planning-data-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-financial-planning-entry-item-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-flexible-constraint-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-area-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-location-hierarchy-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-location-service": "2.1.0",
@@ -209,6 +211,7 @@
     "@sap/cloud-sdk-op-vdm-process-order-confirmation-v2-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-process-order-v2-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-allocation-object-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-product-allocation-sequence-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-availability-info-basic-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-group-data-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-group-service": "2.1.0",
@@ -250,6 +253,7 @@
     "@sap/cloud-sdk-op-vdm-report-ehs-incident-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-request-for-quotation-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-reservation-document-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-responsibility-management-team-configuration-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-responsibility-management-team-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-returns-inspection-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-sales-and-distribution-document-reason-service": "2.1.0",
@@ -268,7 +272,6 @@
     "@sap/cloud-sdk-op-vdm-sales-quotation-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-sales-scheduling-agreement-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-scheduling-agreement-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-segment-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-segmentation-structure-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-service-confirmation-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-service-entry-sheet-service": "2.1.0",
@@ -408,6 +411,7 @@
     "@sap/cloud-sdk-vdm-customer-returns-delivery-v2-service": "2.1.0",
     "@sap/cloud-sdk-vdm-customer-supplier-industry-service": "2.1.0",
     "@sap/cloud-sdk-vdm-debit-memo-request-service": "2.1.0",
+    "@sap/cloud-sdk-vdm-defect-2-service": "2.1.0",
     "@sap/cloud-sdk-vdm-defect-category-service": "2.1.0",
     "@sap/cloud-sdk-vdm-defect-class-service": "2.1.0",
     "@sap/cloud-sdk-vdm-defect-code-service": "2.1.0",
@@ -440,6 +444,7 @@
     "@sap/cloud-sdk-vdm-functional-location-hierarchy-service": "2.1.0",
     "@sap/cloud-sdk-vdm-functional-location-service": "2.1.0",
     "@sap/cloud-sdk-vdm-fund-hierarchy-service": "2.1.0",
+    "@sap/cloud-sdk-vdm-fund-service": "2.1.0",
     "@sap/cloud-sdk-vdm-glaccount-in-chart-of-accounts-service": "2.1.0",
     "@sap/cloud-sdk-vdm-glaccount-line-item-service": "2.1.0",
     "@sap/cloud-sdk-vdm-golden-tax-interface-customer-type-service": "2.1.0",
@@ -693,7 +698,7 @@
     "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.13.13",
+    "@sap/hana-client": "2.13.21",
     "@sap/hana-database-explorer": "1.7.0",
     "@sap/hana-eim-sditools-vscode": "1.0.7",
     "@sap/hana-performance-tools": "1.3.8",
