updated CAP package

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@sap/audit-logging": "5.5.4",
     "@sap/bas-sdk": "2.0.7",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "6.0.3",
+    "@sap/cds": "6.0.4",
     "@sap/cds-compiler": "3.0.2",
     "@sap/cds-dk": "6.0.3",
     "@sap/cds-dk-foss": "1.0.2",
@@ -123,14 +123,12 @@
     "@sap/cloud-sdk-op-vdm-cost-center-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-country-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-credit-management-master-data-integration-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-credit-memo-request-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-group-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-material-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-return-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-returns-delivery-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-customer-supplier-industry-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-debit-memo-request-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-default-segment-value-maintenance-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-category-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-class-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-defect-code-service": "2.1.0",
@@ -140,7 +138,6 @@
     "@sap/cloud-sdk-op-vdm-distribution-channel-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-division-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-document-management-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-equipment-hierarchy-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-equipment-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-explicit-assortment-module-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-external-events-read-create-service": "2.1.0",
@@ -148,7 +145,6 @@
     "@sap/cloud-sdk-op-vdm-finance-complementary-table-data-maintenance-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-financial-planning-data-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-financial-planning-entry-item-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-flexible-constraint-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-area-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-location-hierarchy-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-functional-location-service": "2.1.0",
@@ -179,7 +175,6 @@
     "@sap/cloud-sdk-op-vdm-maintenance-order-operation-confirmation-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-maintenance-order-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-maintenance-plan-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-maintenance-task-list-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-manual-accruals-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-master-inspection-characteristic-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-master-recipe-service": "2.1.0",
@@ -195,6 +190,7 @@
     "@sap/cloud-sdk-op-vdm-merchandise-category-hierarchy-node-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-merchandise-category-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-mobile-data-for-last-mile-distribution-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-nutrient-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-nutrient-statement-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-opportunity-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-order-bill-of-material-service": "2.1.0",
@@ -206,12 +202,12 @@
     "@sap/cloud-sdk-op-vdm-phase-relationship-type-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-physical-inventory-doc-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-planned-independent-requirement-service": "2.1.0",
-    "@sap/cloud-sdk-op-vdm-planned-order-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-planned-orders-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-planning-category-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-process-order-confirmation-v2-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-process-order-v2-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-allocation-object-service": "2.1.0",
+    "@sap/cloud-sdk-op-vdm-product-allocation-sequence-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-availability-info-basic-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-group-data-service": "2.1.0",
     "@sap/cloud-sdk-op-vdm-product-group-service": "2.1.0",
@@ -481,6 +477,7 @@
     "@sap/cloud-sdk-vdm-lockbox-post-in-service": "2.1.0",
     "@sap/cloud-sdk-vdm-maintenance-bom-service": "2.1.0",
     "@sap/cloud-sdk-vdm-maintenance-item-service": "2.1.0",
+    "@sap/cloud-sdk-vdm-maintenance-notification-service": "2.1.0",
     "@sap/cloud-sdk-vdm-maintenance-order-confirmation-service": "2.1.0",
     "@sap/cloud-sdk-vdm-maintenance-order-service": "2.1.0",
     "@sap/cloud-sdk-vdm-maintenance-plan-service": "2.1.0",
@@ -700,7 +697,7 @@
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
     "@sap/hana-client": "2.13.22",
     "@sap/hana-database-explorer": "1.7.0",
-    "@sap/hana-eim-sditools-vscode": "1.0.7",
+    "@sap/hana-eim-sditools-vscode": "1.0.7-2",
     "@sap/hana-performance-tools": "1.3.8",
     "@sap/hana-project-explorer": "1.5.0",
     "@sap/hana-sqlscript-lsp": "1.7.0",
