--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-enterprise-service-provider": "0.0.10",
     "@sap/apihub-service-provider": "1.5.3",
-    "@sap/approuter": "11.3.4",
+    "@sap/approuter": "11.4.0",
     "@sap/artifact-management": "1.14.2",
     "@sap/artifact-management-base": "1.14.2",
     "@sap/artifact-management-base-types": "1.14.2",
@@ -35,9 +35,9 @@
     "@sap/audit-logging": "5.5.5",
     "@sap/bas-sdk": "2.1.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "6.1.1",
+    "@sap/cds": "6.1.2",
     "@sap/cds-compiler": "3.1.2",
-    "@sap/cds-dk": "6.1.2",
+    "@sap/cds-dk": "6.1.3",
     "@sap/cds-dk-foss": "1.0.2",
     "@sap/cds-foss": "4.0.0",
     "@sap/cds-graphql": "1.1.0",
@@ -46,7 +46,7 @@
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "2.6.1",
     "@sap/cds-mtxs": "1.1.2",
-    "@sap/cds-odata-v2-adapter-proxy": "1.9.5",
+    "@sap/cds-odata-v2-adapter-proxy": "1.9.6",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
@@ -689,13 +689,13 @@
     "@sap/fibers": "5.0.0-0",
     "@sap/fibrous": "0.5.0-6",
     "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-adaptation-project": "0.2.17",
+    "@sap/generator-adaptation-project": "0.2.18",
     "@sap/generator-adaptation-project-deployment": "0.0.26",
     "@sap/generator-add-hdb-module": "1.4.0",
-    "@sap/generator-base-mta-module": "1.3.7",
+    "@sap/generator-base-mta-module": "2.0.0",
     "@sap/generator-cap-project": "1.6.6",
     "@sap/generator-cds": "2.18.1",
-    "@sap/generator-fiori": "1.7.1",
+    "@sap/generator-fiori": "1.7.3",
     "@sap/generator-hdb-project": "1.4.0",
     "@sap/graph-toolkit": "3.0.8",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.15",
@@ -715,14 +715,14 @@
     "@sap/hdi-deploy": "4.4.1",
     "@sap/hdi-dynamic-deploy": "2.4.1",
     "@sap/hrtt-core-vscode": "1.13.0",
-    "@sap/html5-app-deployer": "4.1.2",
+    "@sap/html5-app-deployer": "4.2.0",
     "@sap/html5-repo-mock": "2.1.0",
     "@sap/instance-manager": "3.3.4",
     "@sap/jobs-client": "1.7.30",
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.1.3",
     "@sap/low-code-event-handler": "1.1.1",
-    "@sap/mdk-tools": "1.3.0",
+    "@sap/mdk-tools": "1.3.1",
     "@sap/modules-exploration": "1.6.10",
     "@sap/mta-lib": "1.7.4",
     "@sap/node-jwt": "1.6.16",
@@ -749,11 +749,15 @@
     "@sap/textmining": "1.1.6",
     "@sap/ui-annotations": "2.0.5",
     "@sap/ui5-builder-webide-extension": "1.1.8",
-    "@sap/ui5-visual-editor": "1.1.22",
-    "@sap/ux-cds-odata-language-server-extension": "1.7.1",
-    "@sap/ux-specification": "1.102.4",
+    "@sap/ui5-visual-editor": "1.1.23",
+    "@sap/ux-annotation-modeler-bas-ext": "1.7.3",
+    "@sap/ux-application-modeler-bas-ext": "1.7.3",
+    "@sap/ux-cds-odata-language-server-extension": "1.7.3",
+    "@sap/ux-help-bas-ext": "1.7.3",
+    "@sap/ux-service-modeler-bas-ext": "1.7.3",
+    "@sap/ux-specification": "1.102.5",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.6.5",
-    "@sap/ux-ui5-tooling": "1.7.1",
+    "@sap/ux-ui5-tooling": "1.7.3",
     "@sap/vscode-cds": "6.1.1",
     "@sap/webide-hdi-base-feature-vscode": "1.13.0",
     "@sap/webide-hdi-feature-vscode": "1.14.0",
