--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sap/bas-sdk": "3.1.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
     "@sap/cds": "6.3.2",
+    "@sap/cds-common-content": "1.0.1",
     "@sap/cds-compiler": "3.4.4",
     "@sap/cds-dk": "6.3.2",
     "@sap/cds-dk-foss": "1.0.2",
@@ -91,7 +92,7 @@
     "@sap/generator-base-mta-module": "2.0.0",
     "@sap/generator-cap-project": "1.6.8",
     "@sap/generator-cds": "2.18.1",
-    "@sap/generator-fiori": "1.8.2",
+    "@sap/generator-fiori": "1.8.3",
     "@sap/generator-hdb-project": "1.5.2",
     "@sap/graph-toolkit": "3.0.10",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.15",
@@ -99,10 +100,10 @@
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
     "@sap/hana-client": "2.14.24",
-    "@sap/hana-database-explorer": "1.10.1",
+    "@sap/hana-database-explorer": "1.11.0",
     "@sap/hana-eim-sditools-vscode": "1.0.8-3",
     "@sap/hana-performance-tools": "1.3.12",
-    "@sap/hana-project-explorer": "1.9.1",
+    "@sap/hana-project-explorer": "1.10.0",
     "@sap/hana-sqlscript-lsp": "1.8.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.1.0",
@@ -110,7 +111,7 @@
     "@sap/hdi": "4.4.0",
     "@sap/hdi-deploy": "4.5.1",
     "@sap/hdi-dynamic-deploy": "2.5.1",
-    "@sap/hrtt-core-vscode": "1.18.0",
+    "@sap/hrtt-core-vscode": "1.19.0",
     "@sap/html5-app-deployer": "4.2.2",
     "@sap/html5-repo-mock": "2.1.1",
     "@sap/instance-manager": "3.5.1",
@@ -146,17 +147,17 @@
     "@sap/ui5-builder-webide-extension": "1.1.9",
     "@sap/ui5-visual-editor": "1.1.26",
     "@sap/ui5-webcomponents-vscode-css-mapping": "1.0.0",
-    "@sap/ux-annotation-modeler-bas-ext": "1.8.2",
-    "@sap/ux-application-modeler-bas-ext": "1.8.2",
-    "@sap/ux-cds-odata-language-server-extension": "1.8.2",
-    "@sap/ux-help-bas-ext": "1.8.2",
-    "@sap/ux-service-modeler-bas-ext": "1.8.2",
-    "@sap/ux-specification": "1.102.13",
+    "@sap/ux-annotation-modeler-bas-ext": "1.8.3",
+    "@sap/ux-application-modeler-bas-ext": "1.8.3",
+    "@sap/ux-cds-odata-language-server-extension": "1.8.3",
+    "@sap/ux-help-bas-ext": "1.8.3",
+    "@sap/ux-service-modeler-bas-ext": "1.8.3",
+    "@sap/ux-specification": "1.102.14",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.6.5",
-    "@sap/ux-ui5-tooling": "1.8.2",
+    "@sap/ux-ui5-tooling": "1.8.3",
     "@sap/vscode-cds": "6.3.0",
-    "@sap/webide-hdi-base-feature-vscode": "1.16.0",
-    "@sap/webide-hdi-feature-vscode": "1.18.1",
+    "@sap/webide-hdi-base-feature-vscode": "1.17.0",
+    "@sap/webide-hdi-feature-vscode": "1.19.0",
     "@sap/wing-run-config-types": "4.2.0",
     "@sap/wing-service-binding": "1.10.2",
     "@sap/wing-service-explorer": "1.7.2",
