--- a/package.json
+++ b/package.json
@@ -23,154 +23,6 @@
   },
   "homepage": "https://github.com/gregorwolf/SAP-NPM-API-collection",
   "dependencies": {
-    "@sap/abap-deploy": "0.10.27",
-    "@sap/apihub-enterprise-service-provider": "0.0.10",
-    "@sap/apihub-service-provider": "1.5.3",
-    "@sap/approuter": "12.0.3",
-    "@sap/artifact-management": "1.17.2",
-    "@sap/artifact-management-base": "1.17.2",
-    "@sap/artifact-management-base-types": "1.17.2",
-    "@sap/artifact-management-mdkplugin": "1.17.2",
-    "@sap/artifact-management-mdkplugin-types": "1.17.2",
-    "@sap/artifact-management-types": "1.17.2",
-    "@sap/asp-middleware": "1.0.11",
-    "@sap/audit-logging": "5.6.2",
-    "@sap/bas-sdk": "3.1.0",
-    "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "6.4.0",
-    "@sap/cds-common-content": "1.0.1",
-    "@sap/cds-compiler": "3.5.2",
-    "@sap/cds-dk": "6.4.0",
-    "@sap/cds-dk-foss": "1.0.2",
-    "@sap/cds-foss": "4.0.0",
-    "@sap/cds-graphql": "1.3.0",
-    "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "6.4.0",
-    "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "2.6.4",
-    "@sap/cds-mtxs": "1.4.2",
-    "@sap/cds-odata-v2-adapter-proxy": "1.9.16",
-    "@sap/cds-ql": "1.21.2",
-    "@sap/cds-reflect": "2.13.5",
-    "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "3.3.0",
-    "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.23",
-    "@sap/cds-sql": "1.24.1",
-    "@sap/cds-sqlite": "1.24.1",
-    "@sap/cf-tools": "3.0.3",
-    "@sap/consume-services": "1.7.14",
-    "@sap/consume-services-types": "0.3.11",
-    "@sap/create-hana-database-artifact": "1.10.0",
-    "@sap/destination-instance-service-provider": "1.2.6",
-    "@sap/di.code-validation.core": "1.0.17",
-    "@sap/di.code-validation.grunt": "1.0.9",
-    "@sap/di.code-validation.js": "2.0.0",
-    "@sap/di.code-validation.json": "1.0.13",
-    "@sap/di.code-validation.xml": "1.1.29",
-    "@sap/dwc-cli": "2022.24.0",
-    "@sap/dwf-core": "2.2.7",
-    "@sap/dwf-deploy": "2.6.6",
-    "@sap/dwf-dlm-backend": "2.5.8",
-    "@sap/dwf-dws-client": "2.6.8",
-    "@sap/dwf-generator": "2.2.1",
-    "@sap/dwf-ndso-backend": "2.3.3",
-    "@sap/e2e-trace": "3.2.0",
-    "@sap/edm-converters": "1.0.43",
-    "@sap/edmx2csn": "1.0.9",
-    "@sap/eslint-plugin-cds": "2.6.0",
-    "@sap/eslint-plugin-ui5-jsdocs": "2.0.8",
-    "@sap/eslint-plugin-webide-feature": "1.3.22",
-    "@sap/external-service-mashup": "1.1.2",
-    "@sap/faas": "0.7.11",
-    "@sap/fibers": "5.0.0-0",
-    "@sap/fibrous": "0.5.0-6",
-    "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-adaptation-project": "0.2.19",
-    "@sap/generator-adaptation-project-deployment": "0.0.28",
-    "@sap/generator-add-hdb-module": "1.5.2",
-    "@sap/generator-base-mta-module": "2.0.0",
-    "@sap/generator-cap-project": "1.6.8",
-    "@sap/generator-cds": "2.18.1",
-    "@sap/generator-fiori": "1.8.4",
-    "@sap/generator-hdb-project": "1.5.2",
-    "@sap/graph-toolkit": "3.0.10",
-    "@sap/grunt-sapui5-bestpractice-build": "1.4.15",
-    "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
-    "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
-    "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.15.17",
-    "@sap/hana-database-explorer": "1.11.1",
-    "@sap/hana-eim-sditools-vscode": "1.0.8-3",
-    "@sap/hana-performance-tools": "1.3.12",
-    "@sap/hana-project-explorer": "1.10.0",
-    "@sap/hana-sqlscript-lsp": "1.8.0",
-    "@sap/hana-theme-vscode": "1.0.0",
-    "@sap/hana-tooling-feature-toggles": "1.1.0",
-    "@sap/hdbext": "7.7.0",
-    "@sap/hdi": "4.4.0",
-    "@sap/hdi-deploy": "4.5.1",
-    "@sap/hdi-dynamic-deploy": "2.5.1",
-    "@sap/hrtt-core-vscode": "1.19.0",
-    "@sap/html5-app-deployer": "4.2.2",
-    "@sap/html5-repo-mock": "2.1.1",
-    "@sap/instance-manager": "3.5.2",
-    "@sap/jobs-client": "1.7.42",
-    "@sap/logger-for-bas-extensions": "1.1.0",
-    "@sap/logging": "6.1.3",
-    "@sap/low-code-event-handler": "1.1.1",
-    "@sap/mdk-tools": "1.4.0",
-    "@sap/modules-exploration": "1.6.10",
-    "@sap/mta-lib": "1.7.4",
-    "@sap/node-jwt": "1.6.16",
-    "@sap/node-vsi": "1.4.22",
-    "@sap/odata-commons": "2.4.2",
-    "@sap/odata-server": "1.8.3",
-    "@sap/odata-v4": "1.9.0",
-    "@sap/open.fe": "1.108.0",
-    "@sap/pdms-sdk": "1.0.0",
-    "@sap/portal-cf-content-deployer": "4.20.0-20220206072628",
-    "@sap/sbf": "6.5.2",
-    "@sap/sbss": "5.3.1",
-    "@sap/sds-deploy": "2.0.5",
-    "@sap/service-provider-apis": "1.6.7",
-    "@sap/service-providers": "0.3.12",
-    "@sap/site-app-server": "1.9.14",
-    "@sap/site-content-deployer": "1.9.16",
-    "@sap/site-entry": "1.9.40",
-    "@sap/subaccount-destination-service-provider": "1.4.5",
-    "@sap/swa-for-sapbas-vsx": "1.2.15",
-    "@sap/textanalysis": "1.1.0",
-    "@sap/textbundle": "4.1.0",
-    "@sap/textmining": "1.1.6",
-    "@sap/ui-annotations": "2.0.5",
-    "@sap/ui5-builder-webide-extension": "1.1.9",
-    "@sap/ui5-visual-editor": "1.1.26",
-    "@sap/ui5-webcomponents-vscode-css-mapping": "1.0.1",
-    "@sap/ux-annotation-modeler-bas-ext": "1.8.3",
-    "@sap/ux-application-modeler-bas-ext": "1.8.3",
-    "@sap/ux-cds-odata-language-server-extension": "1.8.3",
-    "@sap/ux-help-bas-ext": "1.8.3",
-    "@sap/ux-service-modeler-bas-ext": "1.8.3",
-    "@sap/ux-specification": "1.102.14",
-    "@sap/ux-ui5-fe-mockserver-middleware": "1.6.5",
-    "@sap/ux-ui5-tooling": "1.8.4",
-    "@sap/vscode-cds": "6.4.0",
-    "@sap/webide-hdi-base-feature-vscode": "1.17.0",
-    "@sap/webide-hdi-feature-vscode": "1.19.0",
-    "@sap/wing-run-config-types": "4.2.0",
-    "@sap/wing-service-binding": "1.10.2",
-    "@sap/wing-service-explorer": "1.7.2",
-    "@sap/xb-msg": "0.9.12",
-    "@sap/xb-msg-amqp-v091": "0.9.12",
-    "@sap/xb-msg-amqp-v100": "0.9.58",
-    "@sap/xb-msg-env": "0.9.8",
-    "@sap/xb-msg-mqtt-v311": "0.9.17",
-    "@sap/xsenv": "3.4.0",
-    "@sap/xsjs": "6.7.1",
-    "@sap/xsjs-test": "3.2.2",
-    "@sap/xsodata": "8.0.1",
-    "@sap/xss-secure": "4.1.0",
-    "@sap/xssec": "3.2.14"
+    "libnpmsearch": "^8.0.0"
   }
 }
